[project]
authors = [{name = "IgnorantCopy", email = "231880174@smail.nju.edu.cn"}]
dependencies = ["bm3d>=4.0.3,<5"]
name = "LLIE"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
llie = { path = ".", editable = true }

[tool.pixi.feature.gpu.system-requirements]
cuda = "12.1"

[tool.pixi.feature.gpu.dependencies]
cuda-version = "12.1.*"
pytorch-gpu = "*"

[tool.pixi.feature.cpu.dependencies]
pytorch-cpu = "*"

[tool.pixi.environments]
llie-cpu = ["cpu"]
llie-gpu = ["gpu"]

[tool.pixi.tasks]

[tool.pixi.dependencies]
pytorch = ">=2.4.1,<3"
torchvision = ">=0.19.1,<0.23"
pixi-pycharm = ">=0.0.8,<0.0.9"
loguru = ">=0.7.3,<0.8"
opencv = ">=4.11.0,<5"
plotly = ">=6.3.0,<7"
lightning = ">=2.5.5,<3"
tensorboard = ">=2.20.0,<3"
scipy = ">=1.16.1,<2"
einops = ">=0.8.1,<0.9"
torchmetrics = ">=1.8.2,<2"
